resolve text size

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <h1>Kalkulator Sederhana<A1>
+        <h1 class="title">Kalkulator Sederhana<A1>
         
         <div class="input-group">
             <label for="angka1">Angka Pertama:</label>
